--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,5 @@ DB_PORT=5432
 PORT=3000
 
 JWT_SECRET=your_super_secret_key_here
+ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+NODE_ENV=development
