--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,12 @@
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME=dog_shop_db
-DB_PASSWORD=your_local_db_password
 DB_PORT=5432
 PORT=3000
+DB_PASSWORD=123456
 
 JWT_SECRET=your_super_secret_key_here
+
 ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+
 NODE_ENV=development
