--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.3",
     "react-router-dom": "^7.9.1",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "stylis-plugin-rtl": "^2.1.1"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "sass-embedded": "^1.93.2",
     "vite": "^7.1.7"
   }
 }
